--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "shelljs": "^0.7.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
+    "velocity-animate": "^1.5.0",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
