--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "iview": "^2.2.0",
+    "particles.js": "^2.0.0",
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
