--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "iview": "^2.2.0",
     "particles.js": "^2.0.0",
     "vue": "^2.4.2",
+    "vue-i18n": "^5.0.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0"
