--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cropperjs": "^1.1.3",
+    "highlight.js": "^9.12.0",
     "iview": "^2.2.0",
     "particles.js": "^2.0.0",
+    "smartcrop": "^1.1.1",
     "vue": "^2.4.2",
     "vue-i18n": "^5.0.3",
+    "vue-quill-editor": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0"
