--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "smartcrop": "^1.1.1",
     "vue": "^2.4.2",
     "vue-i18n": "^5.0.3",
+    "vue-lazy-render": "^1.0.20",
     "vue-quill-editor": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
